--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -65,6 +65,11 @@ on init
     chmod 0660          /dev/sunwave_fp
 #add by sunwave end
 
+on post-fs
+    start vendor.qseecomd
+    wait_for_prop vendor.sys.listeners.registered true
+    write /dev/ipa 1
+
 on post-fs-data
 #Create folder for mm-qcamera-daemon
     mkdir /data/vendor/camera 0777 camera camera
