X00P: Change user/group permission for for charger
Make charger binary run as system instead of root. Since it
needs to handle input key events, add input as a supplemental
group in addition to system and graphics.

Change-Id: Id1dc46f335087147b7d8cf674664c26f0b511de1

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -384,7 +384,8 @@ service vendor.ril-daemon2 /vendor/bin/hw/rild -c 2
 
 service vendor.charger /system/bin/chargeonlymode
     class charger
-    group system graphics
+    user system
+    group system graphics input
     seclabel u:r:charger:s0
 
 service vendor.msm_irqbalance /vendor/bin/msm_irqbalance -f /vendor/etc/msm_irqbalance.conf
