X00P: Add CAP_SYS_BOOT for charger
Add CAP_SYS_BOOT capability for charger service so that it can
shutdown/reboot the system.

Change-Id: I17ccba74d5a3c38bd751c55bcf42fb3689d730a7

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -386,6 +386,7 @@ service vendor.charger /system/bin/chargeonlymode
     class charger
     user system
     group system graphics input
+    capabilities SYS_BOOT
     seclabel u:r:charger:s0
 
 service vendor.msm_irqbalance /vendor/bin/msm_irqbalance -f /vendor/etc/msm_irqbalance.conf
