X00P: Update perf blobs/configs from LA.UM.8.6.r1-02600-89xx.0
Change-Id: I91398a37313ce9c871aee957768abbaa1c68d5d4

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -395,6 +395,12 @@ service vendor.msm_irqbalance /vendor/bin/msm_irqbalance -f /vendor/etc/msm_irqb
     group root
     disabled
 
+service vendor.msm_irqbal_lb /vendor/bin/msm_irqbalance -f /vendor/etc/msm_irqbalance_little_big.conf
+    class core
+    user root
+    group root
+    disabled
+
 on charger
     load_system_props
     start qcom-post-boot
