--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -67,7 +67,7 @@ on init
 
 on post-fs-data
 #Create folder for mm-qcamera-daemon
-mkdir /data/vendor/qcam/ 0770 camera camera
+    mkdir /data/vendor/camera 0777 camera camera
 
 #add for leadcore fingerprint start
     mkdir /data/fpsensor
