--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -50,9 +50,32 @@ on init
     chown cameraserver cameraserver /dev/cpuset/camera-daemon/tasks
     chmod 0660 /dev/cpuset/camera-daemon/tasks
 
+#add by microarray start
+    chmod 0666 /dev/madev0
+    chown system system /dev/madev0
+#add by microarray end
+
+#add for leadcore fingerprint start
+    chmod 0660 /dev/fpsensor
+    chown system system /dev/fpsensor
+#add for leadcore fingerprint end
+
+#add by sunwave start
+    chown system system /dev/sunwave_fp
+    chmod 0660          /dev/sunwave_fp
+#add by sunwave end
+
 on post-fs-data
 #Create folder for mm-qcamera-daemon
 mkdir /data/vendor/qcam/ 0770 camera camera
+
+#add for leadcore fingerprint start
+    mkdir /data/fpsensor
+    chown system system /data/fpsensor
+    chown system system /data/fpsensor/socket
+    chmod 0660  /data/fpsensor
+    chmod 0660  /data/fpsensor/socket
+#add for leadcore fingerprint end 
 
 #start camera server as daemon
 service qcamerasvr /vendor/bin/mm-qcamera-daemon
